<resources>
    <string name="app_name">Weload Driver</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="mobile">Mobile Number</string>
    <string name="digit_mobile">8 Digit Mobile Number</string>
    <string name="password">Password </string>
    <string name="login">Login </string>
    <string name="back">Back </string>
    <string name="reset">Reset </string>
    <string name="reset_password">Reset Password </string>
    <string name="otp">One Time Password </string>
    <string name="submit">Submit </string>
    <string name="open">Open </string>
    <string name="close">Close </string>
    <string name="successfully_delivered">Successfully Delivered </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weload_drover">Weload Driver </string>
    <string name="select_country">Select Country </string>
     <string name="map_key" translatable="false">AIzaSyDhjAajPL7F9S72YgWv_NRnvpF-tX7EZD0</string>
    <!-- <string name="map_key" translatable="false">AIzaSyATx-84Cf37b06o4_tTNOqdx4ql7wEuU9M</string>-->
     <!--<string name="map_key" translatable="false">AIzaSyBqLLTPEft7TAE_KTNS-np4i3edBWv0SCQ</string>-->


    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

</resources>