<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etMobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="@string/mobile"
            android:maxLength="10"
            android:imeOptions="actionNext"
            android:inputType="phone" />

        <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_below="@id/etMobileNo"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="Login"
        android:layout_margin="50dp"
        android:textStyle="bold"
        android:textSize="19dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
       android:layout_below="@id/etPassword" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/forgot_password"
        android:textColor="@color/splash_color"
        android:textSize="16dp"
        android:layout_below="@id/btnLogin"
        android:textStyle="bold" />
    </RelativeLayout>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:srcCompat="@drawable/ic_truck"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>