<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.view.ResetPasswordActivity">
    <include layout="@layout/layout_back_toolbar"
        android:id="@+id/layoutToolbar" />
    <TableRow android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_below="@id/layoutToolbar"
        android:id="@+id/divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           android:gravity="center_horizontal"
            android:layout_below="@id/layoutToolbar"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/splash_color"
                />
            <EditText
                android:id="@+id/etMobileNo"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:ems="10"
                android:hint="@string/digit_mobile"
                android:layout_marginTop="14dp"
                android:maxLength="10"
                android:inputType="phone"
               />

            <EditText
                android:id="@+id/etOtp"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/otp"
                android:inputType="number"
                />

            <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="New Password"
                android:inputType="textPersonName"
                 />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:ems="10"
                android:hint="Confirm Password"
                android:inputType="textPersonName"
                 />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="@drawable/button_background"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="19dp"
                android:layout_margin="50dp"
                android:textStyle="bold"/>




        </LinearLayout>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:srcCompat="@drawable/ic_login_logo"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>